Applying findbugs - encapsulation and long constructor rules fixes